2005-01-19 Alain Magloire
	PR 83224
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2005-01-19 Alain Magloire
	PR 83151
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2005-01-18 David Inglis
	Fixed bug #82705
	
	* src/org/eclipse/cdt/internal/core/CDescriptor.java
	
2005-01-11 David Inglis

	Fixed NPE bug #82572
	
	* src/org/eclipse/cdt/internal/core/CDescriptor.java
	
2004-12-09 Alain Magloire
	Fix for 80724: not showing initialized global variables.
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-10 David Inglis
	Fixed bug #80713
	
	* utils/org/eclipse/cdt/utils/BinaryObjectAdapter.java
	* utils/org/eclipse/cdt/utils/coff/PE.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java
	* utils/org/eclipse/cdt/utils/elf/parser/ElfBinaryObject.java
	* utils/org/eclipse/cdt/utils/macho/parser/MachOBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryParser.java	

2004-12-09 Alain Magloire
	Fix for 80620
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-02 Alain Magloire
	Fix for PR 40081.
	For Cygwin use NM to get the global variables.
	* utils/org/eclipse/cdt/utils/DefaultGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/IGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/NM.java
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java

2004-11-25 Alain Magloire
	Fix PR 79076
	* utils/org/eclipse/cdt/utils/elf/Elf.java

2004-11-16 Alain Magloire
	FIX for 27663
	* utils/org/eclipse/cdt/utils/pty/PTY.java
	* utils/org/eclipse/cdt/utils/spawner/ProcessFactory.java
	* utils/org/eclipse/cdt/utils/spawner/Spawner.java
	* utils/org/eclipse/cdt/utils/spawner/SpawnerInputStream.java

2004-11-14 Alain Magloire
	Fix for PR 77546.
	Make the error parser manager faster by
	using IResourceProxyVisitor to get the files.